Removed references to IDisposable, removed arg object, added a base abstract class, and modified nuspec and assembly info.

--- a/BogdanM.LocationServices/BogdanM.LocationServices.Core/BogdanM.LocationServices.Core.csproj
+++ b/BogdanM.LocationServices/BogdanM.LocationServices.Core/BogdanM.LocationServices.Core.csproj
@@ -41,9 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="BaseLocationService.cs" />
     <Compile Include="ILocationService.cs" />
+    <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="LatLng.cs" />
-    <Compile Include="LocationServiceArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
